--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -1,5 +1,5 @@
 
-@meida(max-width: $screen-sm-min) {
+@meida(min-width: $screen-sm-min) {
   header {
     h1, h2, h3, h4, h5, h6 {
       max-width: 55%;
