--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,3 +1,4 @@
+
 <div id="ticket">
   <header>
     <h1><%= @project.name %></h1>
@@ -5,6 +6,10 @@
 
   <header>
     <h2><%= @ticket.name %></h2>
+    
+    <ul class="actions">
+      <li><%= link_to "Edit Ticket", [:edit, @project, @ticket], class: "edit" %></li>
+    </ul>
   </header>
 
   <%= simple_format(@ticket.description) %>
