Link tickets and users upon ticket creation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import "font-awesome";
 
 @import "projects";
+@import "tickets";
 @import "responsive";
 
 header {
@@ -72,3 +73,5 @@ header {
   body {
     padding-top: 70px;
   }
+
+ 
